# degree

./: .gitignore  README.md  main.py  notes.txt  pyproject.toml
src/agents/: __init__.py  base.py  v1.py  v2.py  v3.py  v4.py  v5.py  v6.py
src/api/app/: admin.py  agent.py  auth.py  db.py  dialog_router.py  index_manager.py  main.py  schemas.py  user.py
src/api/embedder/: main.py
src/api/reader/: main.py
src/benchmark/: __init__.py  evaluator.py  generator.py  schemas.py
src/benchmark/notebooks/: evaluate_benchmark.ipynb  generate_benchmark.ipynb
src/benchmark/results/: Сводная таблица benchmark.xlsx
src/benchmark/results/evaluation_rag_eval_e1_20260420_211717/: answers.csv  metrics.csv  metrics.xlsx  summary.json
src/benchmark/results/evaluation_rag_eval_e2_20260420_215136/: answers.csv  metrics.csv  metrics2.xlsx  summary.json
src/benchmark/results/evaluation_rag_eval_e3_20260420_221946/: answers.csv  metrics.csv  metrics3.xlsx  summary.json
src/data/index/: db
src/frontend/: main.py  schemas.py
src/indexing/: __init__.py  bm25store.py  chunkstore.py  datastore.py  index.py  vectorstore.py
src/llm/: llm.py
src/notebooks/: lab.ipynb  raw_data_processing.ipynb  react_agent.ipynb
src/preprocessing/: __init__.py  chunker.py  embedder.py  reader.py  schema.py
src/tests/: test_reader.py
src/tree_rag/: agent.py  agent_test.ipynb  index.py  md_process.py  pipeline.ipynb  preprocessing.py  store.py  temp_logs.txt  tree.py  tree_lab.ipynb
src/tree_rag/data/docs_md/: test_file.md
src/utils/: __init__.py  auto_eda_index.py
(+19 files in other folders)
